[package]
name = "ugui_r_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "ugui_r_rs"
path = "src/lib.rs"

[[example]]
name = "buttons"

[dependencies]
flagset = "0.4.4"
num-traits = "0.2"
num-derive = "0.4"
log = { version = "0.4.20", features = [] }
dyn-clone = "1.0.16"
downcast = "0.11.0"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["ttf"]
